Added Vue-Cookies and retouched route guards

--- a/package.json
+++ b/package.json
@@ -31,15 +31,19 @@
         "eslint": "^6.0.1",
         "font-awesome": "^4.7.0",
         "laravel-vue-pagination": "^2.3.0",
+        "material-design-icons-iconfont": "^5.0.1",
         "moment": "^2.22.2",
         "popper": "^1.0.1",
         "sweetalert2": "^8.13.5",
         "vform": "^1.0.1",
+        "vue-cookies": "^1.5.13",
         "vue-phone-number-input": "^0.2.0",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.0.7",
         "vue-session": "^1.0.0",
+        "vue-simple-spinner": "^1.2.8",
         "vue-smart-pagination": "^2.0.9",
+        "vue-spinner": "^1.0.3",
         "vuetify": "^1.5.16",
         "vuex": "^3.1.1"
     }
