Added observers and made Auth Controllers
Created observers for all models to cleanup controllers and created authcontroller to cleanup usercontroller

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "vue-simple-spinner": "^1.2.8",
         "vue-smart-pagination": "^2.0.9",
         "vue-spinner": "^1.0.3",
+        "vue-tel-input": "^2.5.0",
         "vuetify": "^1.5.16",
         "vuex": "^3.1.1",
         "watch": "^1.0.2"
