--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
         "admin-lte": "^3.0.0-beta.1",
         "bootstrap-vue": "^2.0.0-rc.26",
         "chalk": "^2.4.2",
+        "echo": "^0.1.9",
         "eslint": "^6.0.1",
         "font-awesome": "^4.7.0",
         "laravel-vue-pagination": "^2.3.0",
         "material-design-icons-iconfont": "^5.0.1",
         "moment": "^2.22.2",
         "popper": "^1.0.1",
+        "pusher": "^2.2.1",
         "sweetalert2": "^8.13.5",
         "vform": "^1.0.1",
         "vue-cookies": "^1.5.13",
