--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
-        "laravel/framework": "5.7.*",
-        "laravel/telescope": "1.0",
+        "laravel/framework": "5.8.30",
         "laravel/passport": "^7.3",
-        "laravel/tinker": "^1.0"
+        "laravel/telescope": "^2.0.6",
+        "laravel/tinker": "^1.0",
+        "propaganistas/laravel-phone": "^4.2"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
