--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
         "jquery": "^3.4.1",
-        "laravel-mix": "^4.0.7",
+        "laravel-mix": "^4.1.2",
+        "laravel-mix-bundle-analyzer": "^1.0.2",
         "lodash": "^4.17.14",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.22.4",
         "sass-loader": "^7.1.0",
+        "stylus-loader": "^3.0.2",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "vuetify-loader": "^1.3.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.9.0",
@@ -36,9 +39,11 @@
         "moment": "^2.22.2",
         "popper": "^1.0.1",
         "pusher": "^2.2.1",
+        "stylus": "^0.54.5",
         "sweetalert2": "^8.13.5",
         "vform": "^1.0.1",
         "vue-cookies": "^1.5.13",
+        "vue-flag-icon": "^1.0.6",
         "vue-i18n": "^8.12.0",
         "vue-phone-number-input": "^0.2.0",
         "vue-progressbar": "^0.7.5",
